--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-code-highlight": "^0.7.6",
     "vue-i18n": "^8.21.1",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
