--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "highlight.js": "^10.3.1",
     "vue": "^2.6.11",
     "vue-i18n": "^8.21.1",
     "vue-router": "^3.2.0",
