--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
+    "@mdi/font": "^5.7.55",
     "core-js": "^3.6.5",
     "highlight.js": "^10.3.1",
     "vue": "^2.6.11",
